example/src/main/deploy/openshift/grafana-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: hono-metrics
    version: "${project.version}"
    group: ${project.groupId}
  name: grafana
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: grafana
